tests/ui/compile-fail-0.stderr
error: ERROR
 --> $DIR/compile-fail-0.rs:1:1
  |
1 | compile_error!("ERROR");
  | ^^^^^^^^^^^^^^^^^^^^^^^^
